--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,7 @@ header {
     transform: translateX(-50%);
     color: white;
     text-align: center;
+    overflow-y: hidden;
 }
 
 .header-content .pha1 {
@@ -59,6 +60,7 @@ nav {
     background-color: rgba(0, 0, 0, 0.712);
     padding: 5px 60px;
     z-index: 1;
+    position: relative;
 }
 
 nav ul {
@@ -436,6 +438,12 @@ header .header-content {
     height: 50%;
 }
 
+@media all and (max-width:1100px) {
+    header .header-content h1 {
+        font-size: 40px;
+    }
+}
+
 
 /* end contact style */
 
@@ -638,7 +646,7 @@ main .Gallery .gallery-cars .gallery-title {
         /* flex-wrap: wrap; */
     }
     main .Gallery .gallery-cars {
-        width: 45%;
+        width: 80%;
     }
 }
 
@@ -714,7 +722,7 @@ button {
     outline: none;
     transition: all 0.5s ease-in-out;
     position: relative;
-    left: 50%;
+    /* left: 50%; */
     /* transform: translateX(-50%); */
     width: 140px;
     height: 50px;
